--- a/website/package.json
+++ b/website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": “legislators-website,
+  "name": "legislators-website",
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
